Fixed alignment on display page

--- a/movies-omdb-front-end/css/index.css
+++ b/movies-omdb-front-end/css/index.css
@@ -10,12 +10,19 @@
     text-align: center;
 }
 
+.movie-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .movie-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 30%;
 }
 
 .btn-search {
